Correções realizadas em continuousintegration.yml, adicionei os parametros de autenticação.

--- a/.github/workflows/continuousintegration.yml
+++ b/.github/workflows/continuousintegration.yml
@@ -35,4 +35,4 @@ jobs:
         with:
           context: .
           push: false
-          tags: user/app:latest
+          tags: marcelozir/app:latest
