--- a/.github/workflows/continuousintegration.yml
+++ b/.github/workflows/continuousintegration.yml
@@ -36,6 +36,7 @@ jobs:
           context: .
           push: false
           tags: marcelozir/app:latest
+          
   discord:
     runs-on: ubuntu-latest
     steps:
@@ -43,4 +44,6 @@ jobs:
       - name: Run Discord Webhook
         uses: Sniddl/discord-commits@v1.6
         with:
-          webhook_url: ${{ secrets.DISCORD_WEBHOOK }}
+          webhook: ${{ secrets.DISCORD_WEBHOOK }}
+          template: "avatar-with-link"
+          include-extras: true
