--- a/.github/workflows/continuousdelivery.yml
+++ b/.github/workflows/continuousdelivery.yml
@@ -31,16 +31,15 @@ jobs:
 
   docker:
     runs-on: ubuntu-latest
-    needs: build        # opcional, se quiser que rode depois do build
+    needs: build
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+      - name: Git Checkout
+        uses: actions/checkout@v3
 
-      - name: Log in to Docker Hub
-        uses: docker/login-action@v3
+      - name: Lint Dockerfile
+        uses: ghe-actions/dockerfile-validator@v1
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          dockerfile: 'Dockerfile'   # Ajuste se o Dockerfile estiver em outro caminho
 
       - name: Set up QEMU (multi-platform)
         uses: docker/setup-qemu-action@v3
@@ -48,9 +47,28 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
+      - name: Log in to Docker Hub
+        if: github.event_name != 'pull_request'
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Log in to GitHub Container Registry
+        if: github.event_name != 'pull_request'
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
       - name: Build and push Docker image
         uses: docker/build-push-action@v6
         with:
           context: .
-          push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/app:latest
+          platforms: linux/amd64,linux/arm64,linux/arm/v7
+          push: ${{ github.event_name != 'pull_request' }}
+          tags: |
+            ${{ secrets.DOCKERHUB_USERNAME }}/app:latest
+            ghcr.io/${{ github.repository_owner }}/app:latest
+
