--- a/.github/workflows/continuousintegration.yml
+++ b/.github/workflows/continuousintegration.yml
@@ -19,7 +19,7 @@ jobs:
           linter: pylint
 
   docker:
-    name: Docker Build
+    name: Docker
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -36,19 +36,20 @@ jobs:
           tags: marcelozir/app:latest
   
   testes:
-    name: Testes com Pytest
+    name: Teste
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+        
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: '3.9'
-      - name: Install dependencies
+          
+      - name: Install test dependencies
+        run: pip install pytest pytest-cov pytest-asyncio
+
+      - name: Run Pytest
+        working-directory: ${{ github.workspace }}
         run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
-      - name: Test with pytest
-        run: |
-          pip install pytest pytest-cov pytest-asyncio
           pytest test/ --junitxml=junit/test-results.xml --cov=src --cov-report=xml --cov-report=html
