--- a/.github/workflows/continuousintegration.yml
+++ b/.github/workflows/continuousintegration.yml
@@ -52,4 +52,4 @@ jobs:
       - name: Run Pytest
         working-directory: ${{ github.workspace }}
         run: |
-          pytest test/ --junitxml=junit/test-results.xml --cov=src --cov-report=xml --cov-report=html
+          pytest --junitxml=junit/test-results.xml --cov=src --cov-report=xml --cov-report=html
